--- a/public/voc-list-editor.html
+++ b/public/voc-list-editor.html
@@ -118,6 +118,7 @@
                 .then(response => response.json())
                 .then(result => {
                     console.log('Update successful:', result);
+                    alert('Update successful!');
                 })
                 .catch(error => console.error('Error updating JSON:', error));
         });
