Back-end update

--- a/public/mys-list-editor.html
+++ b/public/mys-list-editor.html
@@ -10,9 +10,9 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
-    <meta property="og:title" content="List Editor">
+    <meta property="og:title" content="List editor">
     <meta property="og:description"
-        content="List Editor, self explanatory.">
+        content="List editor, self explanatory.">
     <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/voc-list.html">
     <meta property="og:image" id="og-image"
         content="https://cdn.discordapp.com/attachments/1246327728588849162/1251096242075860992/image.png?ex=666d55ac&is=666c042c&hm=1673e30fb92b931a8db05c2793e8c374acdfc3acea0928abc6aff203b0d87349&">
@@ -59,7 +59,7 @@
     <div class="top-block"></div>
     <section class="editor-section">
         <div class="editor-container">
-            <h1>Edit EIO List</h1>
+            <h1>Edit Malaysian List</h1>
             <textarea id="json-editor" rows="65" cols="100"></textarea>
             <div class="btn-container">
                 <button id="cancel-btn">Cancel</button>
@@ -69,7 +69,7 @@
     </section>
     <div class="loader"></div>
     <script>
-        const prefix = 'iddata';
+        const prefix = 'mysdata';
         const listBlobsApiUrl = '/api/listBlobs';
         let blobUrl = '';
         let originalData = '';
