--- a/public/rgDx3q1Xoo3iNLE.html
+++ b/public/rgDx3q1Xoo3iNLE.html
@@ -63,7 +63,7 @@
             <textarea id="json-editor" rows="65" cols="100"></textarea>
             <div class="btn-container">
                 <button id="cancel-btn">Cancel</button>
-                <button id="save-btn">Save Changes</button>
+                <button id="save-btn" onClick="window.location.reload();">Save Changes</button>
             </div>
         </div>
     </section>
