Implemented Drag and drop

--- a/public/CUmENgiZiU1ZiFGm4lik.html
+++ b/public/CUmENgiZiU1ZiFGm4lik.html
@@ -75,7 +75,7 @@
                         <input type="text" id="verifier" name="verifier" placeholder="E.G : itsmycrafted"><br>
         
                         <label for="link">YouTube Link:</label>
-                        <input type="text" id="link" name="link" placeholder="E.G : https://youtube.com/watch?v=..."><br>
+                        <input type="text" id="link" name="link" placeholder="E.G : https://youtube.com/watch?v=... (NOT youtu.be)"><br>
         
                         <label for="gamelink">Game Link:</label>
                         <input type="text" id="gamelink" name="gamelink" placeholder="E.G : https://roblox.com/game-id"><br>
@@ -89,8 +89,8 @@
             </div>
         </div>
     </section>
-    <div class="loader"></div>
     <script src="editor.js"></script>
+    <div class="loader"></div>
     <script>
         window.si = window.si || function () {
             (window.siq = window.siq || []).push(arguments);
