--- a/public/CUmENgiZiU1ZiFGm4lik.html
+++ b/public/CUmENgiZiU1ZiFGm4lik.html
@@ -80,6 +80,8 @@
                         <label for="gamelink">Game Link:</label>
                         <input type="text" id="gamelink" name="gamelink" placeholder="E.G : https://roblox.com/game-id"><br>
                     </form>
+                    <button id="move-up-btn">&lt;</button>
+                    <button id="move-down-btn">&gt;</button>
                 </div>
             </div>
             <div class="btn-container">
