--- a/public/voc-list.html
+++ b/public/voc-list.html
@@ -23,7 +23,7 @@
     <header>
         <div class="nav-container">
             <div class="info-text">
-                <a href="index"><span>Korean</span> Obby Community List</a>
+                <a href="index"><span>Vietnamese</span> Obby Community List</a>
             </div>
             <div class="nav-group">
                 <div class="nav" id="home">
