list button fix

--- a/public/eio-list.html
+++ b/public/eio-list.html
@@ -59,7 +59,7 @@
     <div class="top-block"></div>
     <nav class="lists">
         <div>
-            <a href="" href="" onClick=" onRouteClick('a'); return false; ">
+            <a href="" onClick=" onRouteClick('a'); return false; ">
                 <h1>Main List</h1>
             </a>
         </div>
