--- a/public/mys-list.html
+++ b/public/mys-list.html
@@ -58,12 +58,12 @@
     <div class="top-block"></div>
     <nav class="lists">
         <div>
-            <a href="#main-list">
+            <a href="" onClick=" onRouteClick('a'); return false; ">
                 <h1>Main List</h1>
             </a>
         </div>
         <div>
-            <a href="#legacy-list">
+            <a href="" onClick=" onRouteClick('b'); return false; ">
                 <h1>Legacy List</h1>
             </a>
         </div>
