--- a/public/koc-list.html
+++ b/public/koc-list.html
@@ -58,12 +58,12 @@
     <div class="top-block"></div>
     <nav class="lists">
         <div>
-            <a href="#main-list">
+            <a href="" onClick=" onRouteClick('a'); return false; ">
                 <h1>Main List</h1>
             </a>
         </div>
         <div>
-            <a href="#legacy-list">
+            <a href="" onClick=" onRouteClick('b'); return false; ">
                 <h1>Legacy List</h1>
             </a>
         </div>
@@ -103,7 +103,7 @@
             const cards = document.querySelectorAll(".card");
 
             const setCardOpacity = () => {
-                cards.forEach(card => {
+                cards.forEach((card) => {
                     const rect = card.getBoundingClientRect();
                     const windowHeight = window.innerHeight;
 
@@ -116,7 +116,7 @@
                 });
             };
 
-            window.addEventListener('scroll', setCardOpacity);
+            window.addEventListener("scroll", setCardOpacity);
             setCardOpacity(); // Initial call to set the opacity on page load
         });
 
