more functional marquee

--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,7 @@
         </div>
     </section>
     <section class="marquee">
-        <div class="track">
-            <div class="content" id="top-players">&nbsp;Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder</div>
-        </div>
+        <marquee behavior="" direction="" class="content" id="top-players">&nbsp;Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder</marquee>
     </section>
     <section class="contributors">
         <h2>Contributors</h2>
