--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,9 @@
         </div>
     </section>
     <section class="marquee">
-        <marquee behavior="" direction="" class="content" id="top-players">&nbsp;Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder</marquee>
+        <div class="content" id="top-players">
+            Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder
+        </div>
     </section>
     <section class="contributors">
         <h2>Contributors</h2>
