--- a/public/CUmENgiZiU1ZiFGm4lik.html
+++ b/public/CUmENgiZiU1ZiFGm4lik.html
@@ -86,6 +86,7 @@
             </div>
             <div class="btn-container">
                 <button id="cancel-btn">Cancel</button>
+                <button id="del-btn">Delete</button>
                 <button id="add-btn">Add Data</button>
                 <button id="save-btn">Save Changes</button>
             </div>
