News Placeholder Update

--- a/public/index.html
+++ b/public/index.html
@@ -84,20 +84,36 @@
                     <div class="carousel-blur" style="background-image: url(https://img.youtube.com/vi/AJIPS8X7Ew8/hqdefault.jpg);"></div>
                     <div class="carousel-overlay">
                         <h3>Honor on #1.</h3>
-                        <p>Honor has been placed #1 in the Indonesian rankings.</p>
+                        <p>Honor has been placed #1 in the ID List.</p>
                     </div>  
                 </div>
                 <div class="carousel-item">
-                    <img src="https://img.youtube.com/vi/AJIPS8X7Ew8/hqdefault.jpg" alt="Image 2">
+                    <div class="carousel-blur" style="background-image: url(https://img.youtube.com/vi/Sm4Z1hGcpJo/hqdefault.jpg);"></div>
+                    <div class="carousel-overlay">
+                        <h3>Tower of Malefic Nuisances on #2.</h3>
+                        <p>Tower of Malefic Nuisances has been placed #2 in the VN List.</p>
+                    </div>  
                 </div>
                 <div class="carousel-item">
-                    <img src="https://img.youtube.com/vi/AJIPS8X7Ew8/hqdefault.jpg" alt="Image 3">
+                    <div class="carousel-blur" style="background-image: url(https://img.youtube.com/vi/LE1WaE8Vb4I/hqdefault.jpg);"></div>
+                    <div class="carousel-overlay">
+                        <h3>Back There Benjamin on #1.</h3>
+                        <p>Back There Benjamin has been placed #1 in the Global List.</p>
+                    </div>  
                 </div>
                 <div class="carousel-item">
-                    <img src="https://img.youtube.com/vi/AJIPS8X7Ew8/hqdefault.jpg" alt="Image 4">
+                    <div class="carousel-blur" style="background-image: url(https://img.youtube.com/vi/RHWJZOX3n1E/hqdefault.jpg);"></div>
+                    <div class="carousel-overlay">
+                        <h3>Tower of Malefic Nuisances on #2.</h3>
+                        <p>Tower of Malefic Nuisances has been placed #2 in the ID List.</p>
+                    </div>  
                 </div>
                 <div class="carousel-item">
-                    <img src="https://img.youtube.com/vi/AJIPS8X7Ew8/hqdefault.jpg" alt="Image 5">
+                    <div class="carousel-blur" style="background-image: url(https://img.youtube.com/vi/nuwfuRaRZUM/hqdefault.jpg);"></div>
+                    <div class="carousel-overlay">
+                        <h3>Tower of Malefic Nuisances on #3.</h3>
+                        <p>Tower of Malefic Nuisances has been placed #3 in the KR List.</p>
+                    </div>  
                 </div>
             </div>
             <button class="carousel-control-prev" id="prevBtn">&lt;</button>
