--- a/public/CUmENgiZiU1ZiFGm4lik.html
+++ b/public/CUmENgiZiU1ZiFGm4lik.html
@@ -25,21 +25,6 @@
     <div id="prefix-container" data-prefix="iddata"></div>
     <div id="editor-container"></div>
     <div id="footer-container"></div>
-    <script src="editor.js"></script>
-    <script>
-        window.si = window.si || function () {
-            (window.siq = window.siq || []).push(arguments);
-        };
-    </script>
-    <script defer src="/_vercel/speed-insights/script.js"></script>
-    <script>
-        window.va = window.va || function () {
-            (window.vaq = window.vaq || []).push(arguments);
-        };
-    </script>
-    <script defer src="/_vercel/insights/script.js"></script>
-    <script src="script/traffic.js"></script>
-    <script src="script/dropdown_loader.js"></script>
     <script>
         function loadHTML(file, elementId) {
             fetch(file)
@@ -56,5 +41,20 @@
             loadHTML("layout/editor.html", "editor-container");
         });
     </script>
+    <script defer src="editor.js"></script>
+    <script>
+        window.si = window.si || function () {
+            (window.siq = window.siq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
+    <script>
+        window.va = window.va || function () {
+            (window.vaq = window.vaq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
+    <script src="script/traffic.js"></script>
+    <script src="script/dropdown_loader.js"></script>
 </body>
 </html>
