--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="bypassing1">
     <meta property="og:title" content="List editor">
     <meta property="og:description"
-        content="The oObbylist, An obby list that features the hardest obby from individual country">
+        content="The Obbylist, An obby list that features the hardest obby from individual country">
     <meta property="og:url" content="https://obbylist.vercel.app/">
     <meta property="og:image" id="og-image"
         content="https://cdn.discordapp.com/attachments/876171286282383450/1312699817213952032/image.png?ex=674d7279&is=674c20f9&hm=87363ea9a0f7a3e4117627dd99cc5919d8e3dad05dd064ded63535c02c5a3f2c&">
