home metatag fix

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
-    <meta property="og:title" content="List editor">
+    <meta property="og:title" content="The Obby List">
     <meta property="og:description"
         content="The Obbylist, An obby list that features the hardest obby from individual country">
     <meta property="og:url" content="https://obbylist.vercel.app/">
