--- a/public/CUmENgiZiU1ZiFGm4lik.html
+++ b/public/CUmENgiZiU1ZiFGm4lik.html
@@ -55,6 +55,7 @@
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
     <script src="script/traffic.js"></script>
-    <script src="script/dropdown_loader.js"></script>
+    <script src="script/loader.js"></script>
+    <script src="script/dropdown.js"></script>
 </body>
 </html>
