--- a/public/BcGgN1pHw2587WB.html
+++ b/public/BcGgN1pHw2587WB.html
@@ -70,7 +70,7 @@
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
     <script src="script/traffic.js"></script>
-    <script src="script/dropdown_loader.js"></script>
+    <script src="script/loader.js"></script>
     <script>
         function loadHTML(file, elementId) {
             fetch(file)
