--- a/public/CUmENgiZiU1ZiFGm4lik.html
+++ b/public/CUmENgiZiU1ZiFGm4lik.html
@@ -41,7 +41,7 @@
             loadHTML("layout/editor.html", "editor-container");
         });
     </script>
-    <script defer src="editor.js"></script>
+    <script src="editor.js"></script>
     <script>
         window.si = window.si || function () {
             (window.siq = window.siq || []).push(arguments);
