--- a/public/index.html
+++ b/public/index.html
@@ -20,42 +20,7 @@
 </head>
 
 <body>
-    <div class="img"></div>
-    <header>
-        <div class="nav-container">
-            <div class="info-text">
-                <a href="index">The <span>Obbyists</span> List</a>
-            </div>
-            <div class="nav-group">
-                <div class="nav" id="home">
-                    <a href="index">
-                        <img src="assets/home.svg" class="flag-icon">
-                        <h3 class="nav-title">Home</h3>
-                    </a>
-                </div>
-                <div class="dropdown">
-                    <button class="dropbtn" onclick="toggleDropdown()">
-                        <img src="assets/country.svg" class="flag-icon" />
-                        <h3 class="nav-title">Universal List</h3>
-                    </button>
-                    <div class="dropdown-content" id="dropdownContent">
-                        <a href="universal-list">Universal List</a>
-                        <a href="eio-list">Indonesian List</a>
-                        <a href="voc-list">Vietnamese List</a>
-                        <a href="ukr-list">Ukraine List</a>
-                        <a href="koc-list">Korean List</a>
-                        <a href="mys-list">Malaysian List</a>
-                    </div>
-                </div>
-                <div class="nav">
-                    <a href="statistics" target="_blank">
-                        <img src="assets/stats.svg" class="flag-icon" />
-                        <h3 class="nav-title">Player Stats</h3>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </header>
+    <div id="header-container"></div>
     <div class="loader"></div>
     <div class="top-block"></div>
     <section class="information">
@@ -159,223 +124,8 @@
             </div>
         </div>
     </section>
-    <script>
-        const carousel = document.getElementById('carousel');
-        const prevBtn = document.getElementById('prevBtn');
-        const nextBtn = document.getElementById('nextBtn');
-        let currentIndex = 0;
-
-        function updateButtons() {
-            const items = document.querySelectorAll('.carousel-item');
-            const visibleItems = Math.round(carousel.clientWidth / items[0].clientWidth);
-            const itemWidth = carousel.clientWidth / visibleItems;
-
-            if (currentIndex === 0) {
-                prevBtn.classList.add('hidden');
-            } else {
-                prevBtn.classList.remove('hidden');
-            }
-
-            if (currentIndex === items.length - visibleItems) {
-                nextBtn.classList.add('hidden');
-            } else {
-                nextBtn.classList.remove('hidden');
-            }
-        }
-
-        nextBtn.addEventListener('click', () => {
-            const items = document.querySelectorAll('.carousel-item');
-            const visibleItems = Math.round(carousel.clientWidth / items[0].clientWidth);
-            const itemWidth = carousel.clientWidth / visibleItems;
-
-            if (currentIndex < items.length - visibleItems) {
-                currentIndex++;
-                carousel.style.transform = `translateX(-${currentIndex * itemWidth+10}px)`;
-            }
-            updateButtons();
-        });
-
-        prevBtn.addEventListener('click', () => {
-            const items = document.querySelectorAll('.carousel-item');
-            const visibleItems = Math.round(carousel.clientWidth / items[0].clientWidth);
-            const itemWidth = carousel.clientWidth / visibleItems;
-
-            if (currentIndex > 0) {
-                currentIndex--;
-                carousel.style.transform = `translateX(-${currentIndex * itemWidth+10}px)`;
-            }
-            updateButtons();
-        });
-
-        updateButtons();
-        window.addEventListener('resize', updateButtons);
-
-        function scrollToForm() {
-            document.getElementById('obbyFormSection').scrollIntoView({
-                behavior: 'smooth'
-            });
-        }
-        document.getElementById('obbyForm').addEventListener('submit', function (event) {
-            event.preventDefault();
-
-            let formData = {
-                region: document.getElementById('region').value,
-                title: document.getElementById('title').value,
-                verifier: document.getElementById('verifier').value,
-                link: document.getElementById('link').value,
-                gamelink: document.getElementById('gamelink').value,
-                opinions: document.getElementById('opinions').value
-            };
-
-            let formDataForJson = {
-                ...formData
-            };
-            delete formDataForJson.opinions;
-
-            sendToDiscord(formData, formDataForJson);
-        });
-
-        function sendToDiscord(formData, formDataForJson) {
-            let webhookURL =
-                'https://discord.com/api/webhooks/1253170764220338217/Us_FAz0OpOlbyBKigD_EBWyTic3LRZTiTrf1iJj2vKRiusaBomymtmTS3B70eXlgAHDG';
-
-            let embedMessage = {
-                embeds: [{
-                    title: 'New Obby Submission',
-                    fields: [{
-                            name: 'Region',
-                            value: formData.region
-                        },
-                        {
-                            name: 'Title',
-                            value: formData.title
-                        },
-                        {
-                            name: 'Verifier',
-                            value: formData.verifier
-                        },
-                        {
-                            name: 'Video Link',
-                            value: formData.link
-                        },
-                        {
-                            name: 'Game Link',
-                            value: formData.gamelink
-                        },
-                        {
-                            name: 'Opinions',
-                            value: formData.opinions
-                        }
-                    ],
-                    color: 0x7289da
-                }]
-            };
-
-            let jsonData = JSON.stringify(formDataForJson, null, 2);
-
-            embedMessage.embeds[0].fields.push({
-                name: 'JSON Data',
-                value: '```json\n' + jsonData + '\n```'
-            });
-
-            fetch(webhookURL, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(embedMessage),
-                })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    console.log('Form submitted successfully!');
-                    alert('Form submitted successfully!');
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('An error occurred while submitting the form.');
-                });
-        }
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-        particlesJS("particles", {
-            particles: {
-                number: {
-                    value: 100,
-                    density: {
-                        enable: true,
-                        value_area: 800
-                    }
-                },
-                color: {
-                    value: "#ffffff"
-                },
-                shape: {
-                    type: "circle",
-                    stroke: {
-                        width: 0,
-                        color: "#000000"
-                    }
-                },
-                opacity: {
-                    value: 0.8,
-                    random: true,
-                    animation: {
-                        enable: true,
-                        speed: 1,
-                        opacity_min: 0,
-                        sync: false
-                    }
-                },
-                size: {
-                    value: 3,
-                    random: true
-                },
-                line_linked: {
-                    enable: true,
-                    distance: 150,
-                    color: "#ffffff",
-                    opacity: 0.4,
-                    width: 1
-                },
-                move: {
-                    enable: true,
-                    speed: 2,
-                    direction: "none",
-                    random: true,
-                    straight: false,
-                    out_mode: "out",
-                    bounce: false,
-                }
-            },
-            interactivity: {
-                detectsOn: "canvas",
-                events: {
-                    onHover: {
-                        enable: true,
-                        mode: "push"
-                    },
-                    onClick: {
-                        enable: true,
-                        mode: "push"
-                    },
-                    resize: true
-                },
-                modes: {
-                    repulse: {
-                        distance: 100,
-                        duration: 0.4
-                    },
-                    push: {
-                        particles_nb: 4
-                    }
-                }
-            },
-            retina_detect: true
-        });
-    </script>
+    <script src="script/home.js"></script>
     <script src="script.js" id="index"></script>
     <script>
         window.si = window.si || function () {
@@ -390,29 +140,24 @@
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
     <script src="script/traffic.js"></script>
+    <script src="script/loader.js"></script>
+    <script src="script/dropdown.js"></script>
     <script>
-        function toggleDropdown() {
-            const dropdownContent = document.getElementById("dropdownContent");
-            dropdownContent.classList.toggle("show");
+        function loadHTML(file, elementId) {
+            fetch(file)
+                .then(response => response.text())
+                .then(html => {
+                    document.getElementById(elementId).innerHTML = html;
+                })
+                .catch(err => console.error(`Error loading ${file}:`, err));
         }
-
-        const loader = document.querySelector(".loader");
-        const appRoot = document.documentElement;
-
-        const startTransition = () => {
-            loader.style.transform = "translateX(100%)";
-        };
-
-        window.addEventListener("load", () => {
-            startTransition();
-        }, )
+    
+        document.addEventListener("DOMContentLoaded", () => {
+            loadHTML("layout/header.html", "header-container");
+            loadHTML("layout/footer.html", "footer-container");
+        });
     </script>
-    <footer>
-        <p>© Copyright 2024-2024 Elite Indonesian Obbyist</p>
-        <br>
-        <p class="shoutout">Shoutout to :</p>
-        <p>galih_funfan lcknt Zayenzoo D4RAWET proprpod ReaIBear</p>
-    </footer>
+    <div id="footer-container"></div>
 </body>
 
 </html>
