moved traffic to api folder

--- a/public/eMv84e9xbpzigfyifDoa.html
+++ b/public/eMv84e9xbpzigfyifDoa.html
@@ -69,7 +69,7 @@
         };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script src="script/traffic.js"></script>
+    <script src="../api/traffic.js"></script>
     <script>
         function toggleDropdown() {
             const dropdownContent = document.getElementById("dropdownContent");
