--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,7 @@
         };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script src="script/traffic.js"></script>
+    <script src="../api/traffic.js"></script>
     <script src="script/loader.js"></script>
     <script src="script/dropdown.js"></script>
     <footer>
