--- a/public/statistics.html
+++ b/public/statistics.html
@@ -183,7 +183,7 @@
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script src="script/traffic.js"></script>
+    <script src="../api/traffic.js"></script>
     <script>
         function toggleDropdown() {
             const dropdownContent = document.getElementById("dropdownContent");
