--- a/public/eio-list.html
+++ b/public/eio-list.html
@@ -92,7 +92,7 @@
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script src="script/traffic.js"></script>
+    <script src="../api/traffic.js"></script>
     <script src="script/list-type.js"></script>
     <footer>
         <p>© Copyright 2024-2024 Elite Indonesian Obbyist</p>
