--- a/public/rgDx3q1Xoo3iNLE.html
+++ b/public/rgDx3q1Xoo3iNLE.html
@@ -69,7 +69,7 @@
         };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script src="script/traffic.js"></script>
+    <script src="../api/traffic.js"></script>
     <script>
         function toggleDropdown() {
             const dropdownContent = document.getElementById("dropdownContent");
