--- a/public/koc-list.html
+++ b/public/koc-list.html
@@ -92,7 +92,7 @@
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script src="../api/traffic.js"></script>
+    <script src="script/traffic.js"></script>
     <script>
         const appRoot = document.documentElement;
         const nav = document.querySelector(".lists");
