--- a/public/statistics.html
+++ b/public/statistics.html
@@ -110,7 +110,7 @@
 
         function sendToDiscord(formData, formDataForJson) {
             let webhookURL =
-            process.env.OBBY_SUBMIT_HOOK;
+            'https://discord.com/api/webhooks/' + '1253170764220338217/Us_FAz0OpOlbyBKigD_EBWyTic3LRZTiTrf1iJj2vKRiusaBomymtmTS3B70eXlgAHDG';
 
             let embedMessage = {
                 embeds: [{
@@ -183,7 +183,7 @@
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script src="../api/traffic.js"></script>
+    <script src="script/traffic.js"></script>
     <script>
         function toggleDropdown() {
             const dropdownContent = document.getElementById("dropdownContent");
