--- a/public/universal-list.html
+++ b/public/universal-list.html
@@ -92,7 +92,7 @@
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script src="../api/traffic.js"></script>
+    <script src="script/traffic.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const cards = document.querySelectorAll(".card");
